<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="@dimen/spacing_normal_16"
        android:layout_marginEnd="@dimen/spacing_normal_16"
        android:gravity="center"
        android:text="Hello World!"
        android:textSize="@dimen/font_large_24" />

    <ImageView
        android:id="@+id/iv_bender"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/bender_dance"
        android:contentDescription="@string/bender_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/color_primary"
        android:layout_marginTop="@dimen/spacing_normal_16">

        <EditText
            android:id="@+id/et_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:lines="1"
            android:textColor="@color/color_gray_light"
            android:textColorHint="@color/color_gray_light"
            android:hint="@string/edit_text_hint"
            android:paddingTop="@dimen/spacing_normal_16"
            android:paddingBottom="@dimen/spacing_normal_16"
            android:layout_marginRight="@dimen/spacing_normal_16"
            android:layout_marginLeft="@dimen/spacing_normal_16"
            android:inputType="text"
            android:imeOptions="actionDone"
            tools:ignore="Autofill" />

        <ImageView
            android:id="@+id/iv_send"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_send_black_24dp"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/spacing_normal_16"
            tools:ignore="RtlHardcoded"
            android:contentDescription="@string/send_icon" />
    </LinearLayout>
</LinearLayout>
