<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ru.skillbranch.devintensive.ui.custom.AspectRatioImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/abc_vector_test"
            app:aspectRatio="1.78" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/spacing_normal_16">

            <ImageButton
                android:layout_width="@dimen/btn_round_size_40"
                android:layout_height="@dimen/btn_round_size_40"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="@dimen/spacing_huge_32"
                android:layout_toStartOf="@+id/iv_avatar"
                android:background="@drawable/btn_round_bg"
                android:src="@drawable/ic_brightness_7_black_24dp" />

            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="@dimen/avatar_round_size"
                android:layout_height="@dimen/avatar_round_size"
                android:layout_centerHorizontal="true"
                android:src="@drawable/abc_vector_test" />

            <ImageButton
                android:layout_width="@dimen/btn_round_size_40"
                android:layout_height="@dimen/btn_round_size_40"
                android:layout_marginStart="@dimen/spacing_huge_32"
                android:layout_marginTop="36dp"
                android:layout_toEndOf="@+id/iv_avatar"
                android:background="@drawable/btn_round_bg"
                android:src="@drawable/ic_edit_black_24dp" />

            <TextView
                android:id="@+id/tv_name"
                style="@style/Profile.Header.Nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_avatar"
                android:layout_centerHorizontal="true"
                tools:text="John Doe" />

            <TextView
                android:id="@+id/tv_rank"
                style="@style/Profile.Header.Rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_name"
                android:layout_centerHorizontal="true"
                tools:text="Junior Android Developer" />

        </RelativeLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary_light"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="@dimen/spacing_normal_16"
            android:paddingBottom="@dimen/spacing_normal_16">

            <TextView
                style="@style/Profile.Metrics.Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_edit_black_24dp"
                android:text="0" />

            <TextView
                style="@style/Profile.Metrics.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_label_rating" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:layout_marginBottom="@dimen/spacing_normal_16"
            android:background="@color/color_divider_light" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="@dimen/spacing_normal_16"
            android:paddingBottom="@dimen/spacing_normal_16">

            <TextView
                style="@style/Profile.Metrics.Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_edit_black_24dp"
                android:text="0" />

            <TextView
                style="@style/Profile.Metrics.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_label_respect" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        style="@style/Profile.InfoItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ic_avatar"
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40"
            android:src="@drawable/ic_edit_black_24dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wr_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal_16"
            android:layout_toEndOf="@+id/ic_avatar">

            <EditText
                android:id="@+id/et_first_name"
                style="@style/Profile.EditText.Single"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:imeOptions="actionNext" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wr_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wr_first_name"
            android:layout_marginStart="@dimen/spacing_normal_16"
            android:layout_toEndOf="@+id/ic_avatar">

            <EditText
                android:id="@+id/et_last_name"
                style="@style/Profile.EditText.Single"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:imeOptions="actionNext" />

        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="72dp"
        android:background="@color/color_divider_dark" />

    <LinearLayout
        style="@style/Profile.InfoItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40"
            android:src="@drawable/ic_edit_black_24dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal_16">

            <EditText
                android:id="@+id/et_about"
                style="@style/Profile.EditText.MultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/about"
                android:inputType="textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="72dp"
        android:background="@color/color_divider_dark" />

    <LinearLayout
        style="@style/Profile.InfoItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40"
            android:src="@drawable/ic_edit_black_24dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal_16"
            android:layout_marginEnd="@dimen/spacing_normal_16"
            android:layout_weight="1">

            <EditText
                android:id="@+id/et_repository"
                style="@style/Profile.EditText.Single"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repository"
                android:inputType="textUri"
                android:imeOptions="actionDone" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_remove_red_eye_black_24dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
